<resources>
    <string name="app_name">Food Directory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="noodle">Noodle</string>
    <string name="rice">Rice</string>
    <string name="fruit">Fruit</string>
    <string name="meat">Meat</string>
    <string name="addRecord">add Record</string>
    <string name="todo">TODO</string>
    <string name="food_details">Food details</string>
    <string name="search_food_detail">Search Food Detail</string>
    <string name="action_share">Share</string>
    <string name="delete">Delete</string>
    <string name="foodimage">foodImage</string>
    <string name="food_group">Food Group</string>
    <string name="modify">Modify</string>
    <string name="textview">TextView</string>
    <string name="food_name">Food Name</string>
    <string name="date_and_time">Date and Time</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="location">Location</string>
    <string name="displayimage">displayImage</string>
    <string-array name="foodArray">
        <item>Noodle</item>
        <item>Rice</item>
        <item>Meat</item>
    </string-array>
    <string name="name">Name <font color="#FF8080">*</font></string>
    <string name="date">Date <font color="#FF8080">*</font></string>
    <string name="foodGroup">Group <font color="#FF8080">*</font></string>
    <string name="time">Time <font color="#FF8080">*</font></string>
    <string name="reporter">Reporter <font color="#FF8080">*</font></string>

    <string name="rating_bar_label">Please give a rating to the food!</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="food_image">Food image</string>
    <string name="reporter_label">Reporter</string>
    <string name="delete_image">Delete the chosen image</string>
    <string name="take_food_photo">Take a food photo instead</string>
    <string name="rotate_image">Rotate the chosen image</string>

    <string name="my_best_foods">My Best Foods</string>
    <string name="logo">logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="skip">Skip</string>
    <string name="clear">clear</string>
</resources>