<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/splashBackground"
    tools:context=".WelcomeScreen.WelcomeFragment">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_id"
        android:layout_centerHorizontal="true"
        android:text="@string/my_best_foods"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/skipLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>
