<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddFoodFragment">

    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="com.example.assignment.AddFoodViewModel" />
    </data>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#86FBFF">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:text="@={viewModel.name}"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/foodGroupEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/foodGroup"
                    android:text="@={viewModel.group}"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodGroup">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:inputType="date"
                    android:text="@={viewModel.date}"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/time"
                    android:inputType="time"
                    android:text="@={viewModel.time}"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:text="@={viewModel.description}"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reporter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reporterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reporter"
                    android:text="@={viewModel.reporter}"
                    android:textColorHint="#616161"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/ratingBarLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/rating_bar_label"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/take_food_photo_button" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/rating"
                android:rating="@={viewModel.rating}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBarLabel" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#008000"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/add"
                android:textColor="#E0E0E0"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_input_add"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/resetButton"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#800000"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/reset"
                android:textColor="#E0E0E0"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_menu_revert"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                tools:ignore="TextContrastCheck" />

            <FrameLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="384dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reporter">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/border"
                    android:contentDescription="@string/food_image"
                    android:padding="4dp"
                    app:srcCompat="@drawable/placeholder" />

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="2dp"
                    android:contentDescription="@string/delete_image"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@android:drawable/ic_menu_delete"
                    android:visibility="@{viewModel.imageUri == null ? View.GONE : View.VISIBLE}"
                    app:tint="#FF8080"
                    tools:ignore="ImageContrastCheck"
                    tools:visibility="visible" />

                <ImageButton
                    android:id="@+id/rotateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/rotate_image"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@android:drawable/ic_menu_rotate"
                    android:visibility="@{viewModel.imageUri == null ? View.GONE : View.VISIBLE}"
                    app:tint="#C0C0C0"
                    tools:ignore="ImageContrastCheck"
                    tools:visibility="visible" />
            </FrameLayout>

            <Button
                android:id="@+id/take_food_photo_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/take_food_photo"
                android:textSize="16sp"
                app:icon="@android:drawable/ic_menu_camera"
                app:iconTint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
