<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodDetail">

    <data>
        <variable
            name="foodDetailViewModel"
            type="com.example.assignment.FoodDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FoodDetailFragment">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center|top"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/displayimage"

                    app:srcCompat="@drawable/artwork"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/foodGroupLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_group"
                    android:textAlignment="center"
                    android:textColor="#113C93"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/foodGropDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{foodDetailViewModel.group}"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/foodNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textAlignment="center"
                    android:textColor="#113C93"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/foodNameDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{foodDetailViewModel.name}"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/dateAndTimeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_and_time"
                    android:textAlignment="center"
                    android:textColor="#113C93"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateAndTimeDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{foodDetailViewModel.date + ' ' + foodDetailViewModel.time}"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/descriptionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="#113C93"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desceiptionDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{foodDetailViewModel.description}"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/reporterLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reporter_label"
                    android:textAlignment="center"
                    android:textColor="#113C93"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reporterDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{foodDetailViewModel.reporter}"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/ratingLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textAlignment="center"
                    android:textColor="#113C93"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:labelFor="@id/ratingLabel"
                    android:max="5"
                    android:numStars="5"
                    android:rating="@{foodDetailViewModel.rating}"
                    android:stepSize="0.1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="40dp">

                    <Button
                        android:id="@+id/modify_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginStart="80dp"
                        android:backgroundTint="#1E4D85"
                        android:text="@string/modify"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/share_btn"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <Button
                        android:id="@+id/share_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Share"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/modify_btn"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>